gibbon-compiler/examples/error/test26a_treewalk.gib
#lang gibbon

(require "../../ASTBenchmarks/grammar_racket.gib")
(require "../../ASTBenchmarks/treewalk/gibbon/treewalk_gibbon.gib")

; (walk-datum (INTLIT 3))

;; No vars so it PRINTS the same:
(let ([treewalk : Toplvl (BeginTop (CONSTOPLVL (Expression
                                                (Quote (INTLIT 33)))
                                               (NULLTOPLVL)))])
  0)
